added project css and sections

--- a/jsons/projects.json
+++ b/jsons/projects.json
@@ -1,18 +1,9 @@
 [
     {
       "title":"Equilar 100: The Highest-Paid CEOs at the Largest U.S. Companies",
-      "title2": "Pay Trends Before the COVID-19 Pandemic",
+      "type": "Codepen",
+      "image" : "images/cloud.png",
       "link": "https://www.equilar.com/reports/72-highest-paid-ceos-2020-equilar-100.html",
-      "lock" : "",
-      "date"  : "April 23, 2020",
       "description" : "The annual Equilar 100 study examines CEO compensation at the largest companies by revenue that filed an annual proxy statement before March 31."
-    },
-    {
-      "title":"Executive Long-Term Incentive Plans",
-      "title2": "",
-      "link": "https://info.equilar.com/2435-2020-ltip",
-      "lock" : "true",
-      "date"  : "April 16, 2020",
-      "description" : "<i>Executive Long-Term Incentive Plans</i>, an Equilar publication, examines trends in incentive plan design at Equilar 500 companies over the last five fiscal years. The report analyzes performance metrics and periods associated with long-term awards granted to NEOs, particularly CEOs and CFOs. E*TRADE Corporate Services provided independent commentary on the structure of incentive plan design, particularly in light of the current environment."
     }
 ]
